A few minor UI changes + untracked files that shouldn't have been tracked
Fixed the gitignore again

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-*.DS_Store
+2017 Scouting Collection/2017 Scouting Collection.xcodeproj/xcuserdata/*
+2017 Scouting Collection/2017 Scouting Collection.xcworkspace/xcuserdata/*
+2017 Scouting Collection/2017 Scouting Collection.xcworkspace/xcshareddata/*
