--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-2017 Scouting Collection/2017 Scouting Collection.xcodeproj/xcuserdata/*
-2017 Scouting Collection/2017 Scouting Collection.xcworkspace/xcuserdata/*
-2017 Scouting Collection/2017 Scouting Collection.xcworkspace/xcshareddata/*
+2017\ Scouting\ Collection/2017\ Scouting\ Collection.xcodeproj/project.xcworkspace/xcuserdata/*
+2017\ Scouting\ Collection/2017\ Scouting\ Collection.xcworkspace/xcuserdata/*
+2017\ Scouting\ Collection/2017\ Scouting\ Collection.xcworkspace/xcshareddata/*
+2017\ Scouting\ Collection/Pods/*
+2017\ Scouting\ Collection/Podfile.lock
