--- a/2017 Scouting Collection/Podfile
+++ b/2017 Scouting Collection/Podfile
@@ -9,6 +9,7 @@ target '2017 Scouting Collection' do
   
   pod "QRCode"
   pod 'Spring', :git => 'https://github.com/MengTo/Spring.git', :branch => 'swift3'
+  pod 'Alamofire', '~> 4.0'
   
   target '2017 Scouting CollectionTests' do
     inherit! :search_paths
